update peoplesoft courses service
