# src/swaggerSchemas.yml
@@ -22,12 +22,6 @@ components:
         plainDescription:
           type: string
           description: Résumé de la formation
-        coordinator:
-          type: string
-          description: Le coordinator de la formation
-        responsible:
-          type: string
-          description: Le responsible de la formation
         typeStage:
           type: string
           description: Le type stage de la formation
@@ -36,64 +30,33 @@ components:
           description: La méthode d'enseignement de la formation
         codeCategory:
           type: string
-          description: Le code categorie de la formation
+          description: Le code catégorie de la formation
         price:
           type: number
           description: Le prix de la formation
+        creationDate:
+          type: string
+          description: La date de création de la formation
+        lastUpdatedDate:
+          type: string
+          description: La date de la dernière modification de la formation
       example:
         id: '01c292b5-43a4-4c59-9619-33a8309cdbf0'
         code: 'ACCESS'
         name: 'Access : bien débuter avec les bases de données'
         slug: 'access-bien-debuter-avec-les-bases-de-donnees'
         plainDescription: 'Dans cette formation vous découvrirez la construction des bases de données pour bien les exploiter. Vous utiliserez les différents objets: tables, requêtes, formulaires et états, vous permettant de comprendre leurs rôles et interactions dans Access.'
-        responsible: 'Keko Razzano'
         typeStage: 'Certificat'
         teachingMethod: 'Distanciel'
         codeCategory: 'FSM'
         price: 840
         creationDate: '2021-05-31T14:33:08'
-        restrictions:
-          hidden: false
-          active: true
-          users: null
+        lastUpdatedDate: '2021-11-22T13:03:05'
         meta:
-          creator:
-            autoId: 7
-            id: 'b5e220af-1dfa-4caa-ae30-356237ace824'
-            name: 'Daniel Rodriguez'
-            firstName: 'Daniel'
-            lastName: 'Rodriguez'
-            username: 'dan'
-            picture: null
-            thumbnail: null
-            email: 'dan@konsept.ch'
-            administrativeCode: null
-            phone: null
-            meta:
-              acceptedTerms: null
-              lastLogin: '2021-12-01T08:13:44'
-              created: '2021-05-31T14:17:03'
-              description: null
-              mailValidated: true
-              mailNotified: true
-              personalWorkspace: true
-              locale: 'fr'
-            permissions:
-              open: true
-              contact: true
-              edit: true
-              administrate: true
-              delete: true
-            restrictions:
-              locked: false
-              disabled: false
-              removed: false
-              dates: [null, '2100-01-01T00:00:00']
-            created: '2021-05-31T14:33:08'
-            updated: '2021-11-22T13:03:05'
-            tutorRoleName: null
-            learnerRoleName: null
-            duration: 2
+          tutorRoleName: null
+          learnerRoleName: null
+          days: 2
+          hours: 4
         tags: ['thème # informatique & numérique', 'thème-bis # bases de données & outils de gestion']
     Inscription:
       type: object
